# moonbit-modding

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.linux.toml
moonbit-guest/: .gitignore  Justfile  moon.mod.json
moonbit-guest/bindings/: ffi.mbt  moon.pkg.json  world_calculator_export.mbt
moonbit-guest/bindings/world/calculator/: moon.pkg.json  stub.mbt
moonbit-guest/ffi/: top.mbt
moonbit-guest/interface/fallow/midden/krenel/: ffi.mbt  moon.pkg.json  top.mbt
moonbit-guest/interface/wasi/logging/logging/: ffi.mbt  top.mbt
moonbit-guest/src/: _mod.dhall  moon.pkg  moon.pkg.json  top.mbt
moonbit-guest/wit/: world.wit
moonbit-guest/world/calculator/: ffi_import.mbt  import.mbt
moonbit-guest/world/fortalice/: ffi_import.mbt  top.mbt
src/: asset_mod_metadata.rs  asset_tracking.rs  asset_wasm_binary.rs  load_mods.rs  main.rs  wasm_engine.rs
wit/: world.wit
