[package]
name = "moonbit-modding"
version = "0.1.0"
edition = "2024"

[dependencies.wasmtime]
version = "41.0.3"
default-features = false
features = [
	"cranelift",
	"runtime",
	"component-model",
	"cache",
]

[dependencies]
anyhow = "1.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_dhall = "0.13.0"

bevy = { version = "0.18", default-features = false, features = [
	"bevy_animation",
	"bevy_asset",
	"bevy_core_pipeline",
	"bevy_gilrs",
	"bevy_gizmos",
	"bevy_gltf",
	"bevy_pbr",
	"bevy_render",
	"bevy_scene",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"bevy_picking",
	"picking",
	"ui_picking",
	"experimental_bevy_ui_widgets",
	"bevy_winit",
	"hdr",
	"png",
	"tonemapping_luts",
	"vorbis",
	"wayland",
	"debug",
	"bevy_debug_stepping",
	"bevy_dev_tools",
	"bevy_log",
	"bevy_ui_debug",
	"dynamic_linking",
	"track_location",
	"file_watcher",
	"bevy_gilrs",
	"bevy_winit",
	"default_font",
	"multi_threaded",
	"std",
	"zstd_rust",
	"sysinfo_plugin",
] }